@@ -692,3 +692,7 @@
 - Updated the flags of Dwarven Keg to allow all members of a group to loot it.
 - Added Horde Armaments to the loot table of Anub'ar Ambusher for the quest Into the Fold.
 - Updated the flags of Horde Armaments to allow all members of a group to loot it.
+
+[2024-04-21]
+- Added Composite Ore to the loot table of Wastes Digger for the quest Stocking Up.
+- Updated the flags of Composite Ore to allow all members of a group to loot it.
